a few changes for responsive design on css with media query

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="city">Istanbul, TR</div>
                 <div class="temp">15°C</div>
                 <div class="weather-icon">
-                    <img class="img" src="http://openweathermap.org/img/wn/10d@2x.png" width="120px" alt="">
+                    <img class="img" id="main-img" src="http://openweathermap.org/img/wn/10d@2x.png" width="45%" alt="">
                     <div class="desc">Gunesli</div>
                 </div>
 
@@ -39,7 +39,7 @@
                 <hr>
                 <div class="popTemp" id="london-temp">15°C</div>
                 <div class="weather-icon">
-                    <img id="london-img" src="http://openweathermap.org/img/wn/10d@2x.png" width="90px" alt="">
+                    <img id="london-img" src="http://openweathermap.org/img/wn/10d@2x.png" width="38%" alt="">
                     <div class="popDesc" id="london-desc">Gunesli</div>
                 </div>
                 <div class="infos">
@@ -52,7 +52,7 @@
                 <hr>
                 <div class="popTemp" id="istanbul-temp">15°C</div>
                 <div class="weather-icon">
-                    <img id="ist-img" src="http://openweathermap.org/img/wn/10d@2x.png" width="90px" alt="">
+                    <img id="ist-img" src="http://openweathermap.org/img/wn/10d@2x.png" width="38%" alt="">
                     <div class="popDesc" id="ist-desc">Gunesli</div>
                 </div>
                 <div class="infos">
@@ -65,7 +65,7 @@
                 <hr>
                 <div class="popTemp" id="ny-temp">15°C</div>
                 <div class="weather-icon">
-                    <img id="ny-img" src="http://openweathermap.org/img/wn/10d@2x.png" width="90px" alt="">
+                    <img id="ny-img" src="http://openweathermap.org/img/wn/10d@2x.png" width="38%" alt="">
                     <div class="popDesc" id="ny-desc">Gunesli</div>
                 </div>
                 <div class="infos">
@@ -78,7 +78,7 @@
                 <hr>
                 <div class="popTemp" id="berlin-temp">15°C</div>
                 <div class="weather-icon">
-                    <img id="berlin-img" src="http://openweathermap.org/img/wn/10d@2x.png" width="90px" alt="">
+                    <img id="berlin-img" src="http://openweathermap.org/img/wn/10d@2x.png" width="38%" alt="">
                     <div class="popDesc" id="berlin-desc">Gunesli</div>
                 </div>
                 <div class="infos">
